adicionado botões plays stores e apple store

--- a/login.html
+++ b/login.html
@@ -42,20 +42,20 @@
                 <p class="continue__not-account">
                     <span class="continue__link">Alternar conta</span>
                     ou 
-                    <span class="continue__link">Increve-se</span>
+                    <span class="continue__link">Increva-se</span>
                 </p>
 
             </div>
             
             <div class="app">
 
-                <p class="app__get">Baixe o aplicativo</p>
+                <p class="app__get">Obtenha o aplicativo.</p>
 
                 <div class="app__donwload">
 
-                    <a href="#" class="app__platform"></a>
+                    <a href="#" class="app__platform"><img src="./img/apple-button.png"></a>
 
-                    <a href="#" class="app__platform"></a>
+                    <a href="#" class="app__platform"><img src="./img/googleplay-button.png"></a>
 
                 </div>
             </div>
