--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
                 <p class="continue__not-account">
                     <span class="continue__link">Alternar conta</span>
                     ou 
-                    <span class="continue__link">Increva-se</span>
+                    <span class="continue__link">Inscreva-se</span>
                 </p>
 
             </div>
